# Gym-video-logger

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py  notifications.py  oauth_setup.py  photo_storage.py  processing.py  schemas.py  storage.py  tracker.py  tracker_csv.py  tracker_schemas.py  tracker_seed.py  youtube.py
backend/gym_video_logger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_push_subscriptions.py  0003_workout_tracking.py  0004_csv_fields_and_samples.py  0005_backfill_training_timestamps.py  0006_app_settings.py  0007_body_measurements.py  0008_machine_photos.py
backend/tests/: conftest.py  test_api.py  test_processing.py  test_tracker.py
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: push-notifications.js
frontend/src/: App.tsx  VideoUpload.tsx  api.ts  push.ts  styles.css  types.ts  utils.test.ts  utils.ts
