[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-video-logger"
version = "0.1.0"
description = "Private, single-user gym video processing PWA"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy>=2.0,<3",
  "pydantic-settings>=2.6,<3",
  "python-multipart>=0.0.12,<1",
  "google-api-python-client>=2.150,<3",
  "google-auth-oauthlib>=1.2,<2",
  "cryptography>=42,<50",
  "pywebpush>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "alembic>=1.14,<2",
  "httpx>=0.27,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.8,<1",
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"backend/app/main.py" = ["B008"]
